# svarogIO

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  nightly.yml
benchmarks/: CMakeLists.txt
benchmarks/execution/: strand_bench.cpp  work_queue_bench.cpp
benchmarks/io/: io_context_bench.cpp
cmake/: SvarogTestHelpers.cmake
docs/: BENCHMARK_SCENARIOS.md  BRANCH_NAMING_CONVENTION.md  CLANG_TIDY.md  CODE_STYLE.md  CODING_STANDARDS.md  COROUTINE_EXAMPLES.md  FORMATTING.md  PHASE_1_TASKS.md  REFACTORING_PLAN.md  STRAND_DESIGN.md  UNIT_TEST_SCENARIOS.md
docs/adr/: ADR-001-boost-asio-architecture.md  ADR-002-remove-lockfree-ring-buffer.md  ADR-003-catch2-testing-framework.md  ADR-004-cpp23-features.md  ADR-005-contract-programming.md  README.md
examples/: CMakeLists.txt  README.md
examples/execution_context/: CMakeLists.txt  main.cpp
examples/io_context/: CMakeLists.txt  main.cpp
examples/simple_coroutine/: CMakeLists.txt  main.cpp
examples/simple_task/: CMakeLists.txt  main.cpp
examples/simple_tcp_client/: CMakeLists.txt  main.cpp
examples/simple_tcp_server/: CMakeLists.txt  main.cpp
examples/strand_example/: CMakeLists.txt  main.cpp
examples/thread_pool/: CMakeLists.txt  main.cpp
examples/work_guard/: CMakeLists.txt  main.cpp
examples/work_queue/: CMakeLists.txt  main.cpp
scripts/: README.md  check-format.sh  install-hooks.sh  run-clang-tidy.sh
svarog/: CMakeLists.txt
svarog/include/svarog/core/: contracts.hpp
svarog/include/svarog/execution/: awaitable_task.hpp  co_spawn.hpp  execution_context.hpp  strand.hpp  thread_pool.hpp  work_guard.hpp  work_queue.hpp
svarog/include/svarog/io/: io_context.hpp  steady_timer.hpp  system_timer.hpp
svarog/include/svarog/io/detail/: epoll_reactor.hpp  iocp_reactor.hpp  kqueue_reactor.hpp  platform_config.hpp  reactor_interface.hpp  select_reactor.hpp  timer_queue.hpp
svarog/include/svarog/ip/: ip_address.hpp  ip_address_v4.hpp
svarog/include/svarog/network/: basic_socket.hpp  socket_base.hpp
svarog/include/svarog/network/detail/: socket_types.hpp
svarog/include/svarog/network/ip/: address.hpp  address_v4.hpp  address_v6.hpp  endpoint.hpp  tcp.hpp  udp.hpp
svarog/include/svarog/task/: lockfree_ring_buffer.hpp  task.hpp
svarog/source/svarog/execution/: co_spawn.cpp  execution_context.cpp  strand.cpp  thread_pool.cpp  work_guard.cpp  work_queue.cpp
svarog/source/svarog/io/: io_context.cpp
svarog/source/svarog/io/detail/: epoll_reactor.cpp  iocp_reactor.cpp  kqueue_reactor.cpp  timer_queue.cpp
svarog/source/svarog/ip/: ip_address.cpp  ip_address_v4.cpp
svarog/source/svarog/network/ip/: address.cpp  address_v4.cpp  address_v6.cpp
svarog/source/svarog/task/: task.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  contracts_test.cpp
tests/execution/: coroutine_tests.cpp  execution_context_tests.cpp  strand_tests.cpp  thread_pool_tests.cpp  work_queue_basic_tests.cpp
tests/integration/: phase1_integration_tests.cpp
tests/io/: io_context_tests.cpp
tests/network/: address_tests.cpp  socket_tests.cpp
